[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emantto-gurobi-poc"
version = "0.1.0"
description = "Safe TestPyPI demonstration package"
requires-python = ">=3.10"

[project.scripts]
emantto-gurobi-poc = "emantto_gurobi_poc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

