[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emantto-gurobi"
version = "4.0.0"
description = "GCP test package"
requires-python = ">=3.10"

[project.scripts]
emantto-gurobi = "emantto_gurobi:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

